--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
 <html lang = "ru">
 <head>
 	<meta charset="utf-8"/>
-    <title>Page Title</title>
+    <title>meet - Maxim Bor</title>
 </head>
 <body>
-    <h1>Sample Page</h1>
-    <p>HI</p>
+    <h1>Maxim Bor</h1>
+    <img src="https://github.com/bormaxim/WebDevLAB/blob/master/190018250.jpg" alt="My photo">	
+	<p>HI</p>
 </body>
 </html>
