picture moved to separete folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Maxim Bor</h1>
-    <img src="https://github.com/bormaxim/WebDevLAB/blob/master/190018250.jpg" alt="My photo">	
+    <img src="images\190018250.jpg" alt="My photo">	
 	<p>HI</p>
 </body>
 </html>
