--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
 </head>
 <body>
     <h1>Maxim Bor</h1>
-    <img src="images\190018250.jpg" alt="My photo">	
-	<p>HI</p>
+    <img src="images\190018250.jpg" alt="My photo" width = 150>	
+	<p>
+		Hi all i am glad to see you!
+		<br>Welcome to my page!
+	</p>
+	<h2>
+		My hobbies are:
+	</h2>
+	<ul>
+		<li>Walking with my children</li>
+		<li>Do different fing by my self</li>
+		<li>Learning</li>
+	</ul>
+	<ol>
+		<li>Walking with my children</li>
+		<li>Do different fing by my self</li>
+		<li>Learning</li>
+	</ol>
+	<p>
+	 Come say hello on at <a href="">...</a>
+	<p/>
 </body>
 </html>
